--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "mocha": "^3.2.0"
   },
-  "homepage": "https://github.com/yankouskia/additional_7#readme"
+  "homepage": "https://github.com/yankouskia/additional_7#readme",
+  "dependencies": {
+    "chai": "^4.1.2"
+  }
 }
